--- a/src/styles/cartStyle.css
+++ b/src/styles/cartStyle.css
@@ -1,4 +1,8 @@
 .cart-container{
-    margin-left: 15%;
-    margin-right: 15%;
+    margin-left: 25%;
+    margin-right: 25%;
+}
+
+.product > *{
+    margin: 10px;
 }
