--- a/src/styles/signUpStyle.css
+++ b/src/styles/signUpStyle.css
@@ -108,7 +108,7 @@ body {
     transform: scale(0.95);
   }
   
-  input[type=text],input[type=date],input[type=email]{
+  input[type=text],input[type=date],input[type=email],input[type=password] {
     background-color: #f6f6f6;
     border: none;
     color: #0d0d0d;
@@ -129,12 +129,12 @@ body {
     border-radius: 5px 5px 5px 5px;
   }
   
-  input[type=text]:focus,input[type=date]:focus,input[type=email]:focus {
+  input[type=text]:focus,input[type=date]:focus,input[type=email]:focus,input[type=password]:focus {
     background-color: #fff;
     border-bottom: 2px solid #5fbae9;
   }
   
-  input[type=text]:placeholder,input[type=date]:placeholder,input[type=email]:placeholder {
+  input[type=text]:placeholder,input[type=date]:placeholder,input[type=email]:placeholder,input[type=password]:placeholder {
     color: #cccccc;
   }
   
