--- a/src/styles/gridStyle.css
+++ b/src/styles/gridStyle.css
@@ -1,13 +1,18 @@
 img{
-    width: 100px;
-    max-width: 100px;
-    height: 100px;
-    max-height: 100px;
+    width: 70%;
+    max-width: 70%;
+    height: 70%;
+    max-height: 70%;
+    border-radius: 15%;
+    transition:all .5s;
+}
+
+img:hover{
+    transform: scale(1.2);
 }
 
 .title{
-    margin-top:10px;
-    font-size: 10px;
+    font-size: 15px;
     color:black;
 }
 
@@ -19,18 +24,35 @@ img{
 
   .product{
       text-align: center;
-      margin-bottom: 20px;
-
+      margin: 0;
   }
 
   .add{
-      height: 18px;
-      font-size: 9px;
+      height: 20px;
+      font-size: 10px;
       margin: 5px;
   }
 
   .price{
-      font-size: 10px;
+      font-size: 15px;
       font-weight: bold;
       margin: 5px;
   }
+
+ .line{
+ }
+
+ .style{
+     width: 90%;
+     max-width: 90%;
+     height: 90%;
+     max-height: 90%;
+     border-radius: 15%;
+     padding-top:10%;
+     padding-bottom:10%;
+     transition:all .5s;
+ }
+
+ .style:hover{
+     background-color: #e0e0e0;
+ }
